Agregando contenido de curso de machine learning

--- a/sections/education.tex
+++ b/sections/education.tex
@@ -19,7 +19,33 @@
 		{05/05/2020}
 		{Machine Learning}
 		{Stanford University - Coursera}
-		{En proceso}
+		{
+		    \vspace{-5mm}
+    	    \begin{itemize}
+    	        \setlength\itemsep{0pt}
+    	        \setlength\parskip{0pt}
+    	        \item Introduction
+    	        \item Linear Regression with One Variable
+    	        \item Linear Algebra Review
+    	        \item Linear Regression with Multiple Variables
+    	        \item Octave/Matlab Tutorial
+    	        \item Logistic Regression
+    	        \item Regularization
+    	        \item Neural Networks: Representation
+    	        \item Neural Networks: Learning
+    	        \item Advice for Applying Machine Learning
+    	        \item Machine Learning System Design
+    	        \item Support Vector Machines
+    	        \item Unsupervised Learning
+    	        \item Dimensionality Reduction
+    	        \item Anomaly Detection
+    	        \item Recommender Systems
+    	        \item Large Scale Machine Learning
+    	        \item Application Example: Photo OCR
+    	    \end{itemize}
+    	    \textbf{Calificación:} \\
+    	    95.30\%
+		}
 	\entry
 		{06/04/2020}
 		{Cloud Computing}
