Introducción acerca de mi

--- a/sections/intro_skills_techs.tex
+++ b/sections/intro_skills_techs.tex
@@ -2,7 +2,7 @@
 
 \begin{minipage}[t]{0.4\textwidth} % 40% of the page width for the introduction text
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
-	El viaje por el mundo de la programación me llevó a conocer diferentes tecnologías, algunas utilizadas en entornos laborales y otras en momentos de ocio. Iniciando con los lenguajes de programación, el primer encuentro fue con \emph{C++}, luego vino \emph{.NET} y para aprender \emph{POO} conocí \emph{Java}, fue mi favorito, con este aprendí a usar \emph{Frameworks}, el siguiente fue \emph{Python}, también \emph{PHP}(nunca me gustó, pero muchos lo usan), \emph{C\#} fue necesario aprenderlo para usarlo con \emph{Unity}. Debido a su crecimiento en distintos entornos, más utilizo \emph{Python}. De igual manera trabajé con bases de datos \emph{MySQL}, \emph{MsSQL} y \emph{PostgreSQL}, me quedo con el último, también tuve algunos roces con \emph{MongoDB} y \emph{Cassandra}. Respecto a los sistemas operativos, instalé muchos, hasta encontrar el adecuado, \emph{ArchLinux}. Mis intereses actuales se enfocan en el área de \emph{machine learning}, \emph{deep learning} y \emph{datamining}.
+	Mi nombre completo es Kelvin Helmut Provincia Quispe y mi DNI es 48446320, soy desarrollador de software con capacidad de gestión de proyectos, diseño e implmentación de arquitecturas, bases de datos y configuración de servidores de desarrollo y producción. Tengo la necesidad de seguir aprendiendo constantemente, me gusta estudiar nuevas y mejores formas de hacer algo. Mis intereses actuales de aprendizaje son las prácticas DevOps con CI/CD, Aprendizaje automático y Ciencia de datos. Considero mi habilidad principal la de aprender facilmente, además, me indicaron que tengo una muy buena habilidad para la resolución de problemas.
 \end{minipage}
 \hfill % Whitespace between
 \begin{minipage}[t]{0.5\textwidth} % 50% of the page for the skills bar chart
