--- a/sections/contact_info.tex
+++ b/sections/contact_info.tex
@@ -33,7 +33,7 @@
 	
 	% The first parameter is the FontAwesome icon name, the second is the box size and the third is the text
 	% Other icons can be found by referring to fontawesome.pdf (supplied with the template) and using the word after \fa in the command for the icon you want
-	\icon{MapMarker}{12}{Perú - Arequipa}\\
+	\icon{MapMarker}{12}{Arequipa - Perú}\\
 	\icon{Phone}{12}{\href{https://api.whatsapp.com/send?phone=+51954733536}{954733536}}\\
 	\icon{At}{12}{\href{mailto:aek6.io@gmail.com}{aek6.io@gmail.com}}\\	
 \end{minipage}
