Actualización de educación y moocs

--- a/sections/education.tex
+++ b/sections/education.tex
@@ -5,21 +5,47 @@
 		{2014 -- 2019}
 		{Ingeniería de software}
 		{Universidad La Salle}
-		{Especialidad en investigación, desarrollo e innovación(I+D+I), gracias al conocimiento obtenido sobre estructura de datos, diseño y arquitectura de software, inteligencia artificial(machine learning, deep learning), minería de datos, administración de proyectos, computación distribuida y paralela, entre otros.}
+		{
+		    Especialidad en investigación, desarrollo e innovación(I+D+I), gracias al conocimiento obtenido sobre estructura de datos, diseño y arquitectura de software, inteligencia artificial(machine learning, deep learning), minería de datos, administración de proyectos, computación distribuida y paralela, entre otros.\\
+		    
+		    Egresado: Julio - 2019 \\
+		    Bachillerato: En proceso
+		}
 	\entry
 		{2009 -- 2011}
 		{Computación e informática}
 		{Instituto superior UNITEK - IDAT}
-		{Especialidad en programación, para ello se requirió el aprendizaje de lógica de programación, algunos lenguajes de programación(C++, Java, .Net) y tecnologías informáticas.}
+		{
+		    Especialidad en programación, para ello se requirió el aprendizaje de lógica de programación, algunos lenguajes de programación(C++, Java, .Net) y tecnologías informáticas.\\
+		    
+		    Egresado: Diciembre - 2011
+        }
 \end{entrylist}
 
 \cvsect{Cursos y MOOCs}
 \begin{entrylist}
+    \entry
+		{En proceso}
+		{Introduction to Flutter Development Using Dart}
+		{App Brewery - Google}
+		{
+		    Instructor: Angela Yu \\
+		    \vspace{-5mm}
+    	    \begin{itemize}
+    	        \setlength\itemsep{0pt}
+    	        \setlength\parskip{0pt}
+    	        \item Introduction to Flutter Development
+    	        \item Installation and Setup for Flutter Development
+    	        \item How to Create Flutter Apps From Scratch (I Am Rich Project)
+    	        \item ...
+            \end{itemize}
+		}
 	\entry
 		{05/05/2020}
 		{Machine Learning}
 		{Stanford University - Coursera}
 		{
+		    Instructor: Andrew Ng \\
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
@@ -51,6 +77,7 @@
 		{Cloud Computing}
 		{Escuela de organización industrial - Google Activate}
 		{
+		    Instructor: Juanjo García y Moisés Navarro \\
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
