Quitando Malak de experiencia

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -13,23 +13,23 @@
 %     	        \item lorem
 %     	    \end{itemize}
 %         }
-    \entry
-		{4/2019 -- 4/2020}
-		{Freelance Developer}
-		{Malak}
-		{
-		    \vspace{-5mm}
-    	    \begin{itemize}
-    	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Gestión de proyecto
-    	        \item Diseño e implementación de la arquitectura del sistema
-    	        \item Diseño e implementación de base de datos
-    	        \item Desarrollo backend
-    	        \item Desarrollo frontend
-    	        \item Enlace mediande API REST con sistema Restaurant.pe
-    	    \end{itemize}\texttt{PHP}\slashsep\texttt{Laravel}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}\slashsep\texttt{CPanel}
-        }
+%     \entry
+% 		{4/2019 -- 4/2020}
+% 		{Freelance Developer}
+% 		{Malak}
+% 		{
+% 		    \vspace{-5mm}
+%     	    \begin{itemize}
+%     	        \setlength\itemsep{0pt}
+%     	        \setlength\parskip{0pt}
+%     	        \item Gestión de proyecto
+%     	        \item Diseño e implementación de la arquitectura del sistema
+%     	        \item Diseño e implementación de base de datos
+%     	        \item Desarrollo backend
+%     	        \item Desarrollo frontend
+%     	        \item Enlace mediande API REST con sistema Restaurant.pe
+%     	    \end{itemize}\texttt{PHP}\slashsep\texttt{Laravel}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}\slashsep\texttt{CPanel}
+%         }
 	\entry
 		{4/2019 -- 4/2020}
 		{Freelance Developer}
