--- a/sections/contact_info.tex
+++ b/sections/contact_info.tex
@@ -20,7 +20,7 @@
                 \begin{tikzpicture} 
                     \begin{scope}
                         \clip [rounded corners=1.5cm] (0,0) rectangle coordinate (centerpoint) (3,3cm); 
-                        \node [inner sep=0pt] at (centerpoint) {\includegraphics[width=3.0cm,keepaspectratio]{foto2017}}; 
+                        \node [inner sep=0pt] at (centerpoint) {\includegraphics[width=3.0cm,keepaspectratio]{images/foto}}; 
                     \end{scope}
                 \end{tikzpicture}
                 \vfill
