Nuevas secciones de: Conocimientos y Anexos Actualización de Cursos

--- a/main.tex
+++ b/main.tex
@@ -27,13 +27,19 @@
 \usepackage{eso-pic}
 \usepackage{tikz}
 \usepackage{graphicx}
+\usepackage{multicol}
+\usepackage[inline]{enumitem}
+\usepackage{amssymb}
+% \usepackage{pdfpages}
 
 \begin{document}
 
 \input{sections/contact_info}
 \input{sections/intro_skills_techs}
+\input{sections/skills_techs}
 \input{sections/experience}
 \input{sections/education}
 \input{sections/additional_info}
+\input{sections/anexos}
 
 \end{document}
