--- a/sections/education.tex
+++ b/sections/education.tex
@@ -22,12 +22,55 @@
         }
 \end{entrylist}
 
+\newpage
+
 \cvsect{Cursos y MOOCs}
 \begin{entrylist}
     \entry
-		{En proceso}
+		{15/06/2020}
+		{Data Science Math Skills}
+		{Duke University - Coursera}
+		{
+		    Instructor: Daniel Egger y Paul Bendich \\
+		    \vspace{-5mm}
+    	    \begin{itemize}
+    	        \setlength\itemsep{0pt}
+    	        \setlength\parskip{0pt}
+    	        \item Welcome to Data Science Math Skills
+    	        \item Building Blocks for Problem Solving
+    	        \item Functions and Graphs
+    	        \item Measuring Rates of Change
+    	        \item Introduction to Probability Theory
+            \end{itemize}
+            
+            \textbf{Certificado:} \\
+            ID: XP73L8MVSYLE \\
+            URL: {\href{https://coursera.org/verify/XP73L8MVSYLE}{coursera.org/verify/XP73L8MVSYLE}}
+		}
+    \entry
+		{03/06/2020}
+		{IA para todos}
+		{deeplearning.ai - Coursera}
+		{
+		    Instructor: Andrew Ng \\
+		    \vspace{-5mm}
+    	    \begin{itemize}
+    	        \setlength\itemsep{0pt}
+    	        \setlength\parskip{0pt}
+    	        \item ¿Qué es la IA?
+    	        \item Creación de proyectos de IA
+    	        \item Desarrollo de IA en su empresa
+    	        \item La IA y la sociedad
+            \end{itemize}
+            
+            \textbf{Certificado:} \\
+            ID: W5Y25Q7GVVKB \\
+            URL: {\href{https://coursera.org/verify/W5Y25Q7GVVKB}{coursera.org/verify/W5Y25Q7GVVKB}}
+		}
+    \entry
+		{03/06/2020}
 		{Introduction to Flutter Development Using Dart}
-		{App Brewery - Google}
+		{App Brewery}
 		{
 		    Instructor: Angela Yu \\
 		    \vspace{-5mm}
@@ -37,8 +80,17 @@
     	        \item Introduction to Flutter Development
     	        \item Installation and Setup for Flutter Development
     	        \item How to Create Flutter Apps From Scratch (I Am Rich Project)
-    	        \item ...
+    	        \item Running Your App on a Physical Device
+    	        \item I Am Poor - App Challenge
+    	        \item MiCard - How to Build Beautiful UIs with Flutter Widgets
+    	        \item Dicee - Building Apps with State
+    	        \item Boss Level Challenge 1 - Magic 8 Ball
+    	        \item Xylophone - Using Flutter and Dart Packages to Speed Up Development
+    	        \item Quizzler - Modularising \& Organising Flutter Code
+    	        \item Boss Level Challenge 2 - Destini
             \end{itemize}
+            
+            \textbf{Certificado:} En anexos
 		}
 	\entry
 		{05/05/2020}
@@ -91,8 +143,8 @@
 		        \item Conclusiones
 		    \end{itemize}
 		    
-		    \textbf{Verificación:} \\
+		    \textbf{Certificado:} \\
 		    ID: U7B G5R DZP \\
-		    URL: https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code
+		    URL: {\href{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}}
 		}
 \end{entrylist}
