--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -13,25 +13,25 @@
 %     	        \item lorem
 %     	    \end{itemize}
 %         }
-%     \entry
-% 		{4/2019 -- 4/2020}
-% 		{Freelance Developer}
-% 		{Malak}
-% 		{
-% 		    \vspace{-5mm}
-%     	    \begin{itemize}
-%     	        \setlength\itemsep{0pt}
-%     	        \setlength\parskip{0pt}
-%     	        \item Gestión de proyecto
-%     	        \item Diseño e implementación de la arquitectura del sistema
-%     	        \item Diseño e implementación de base de datos
-%     	        \item Desarrollo backend
-%     	        \item Desarrollo frontend
-%     	        \item Enlace mediande API REST con sistema Restaurant.pe
-%     	    \end{itemize}\texttt{PHP}\slashsep\texttt{Laravel}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}\slashsep\texttt{CPanel}
-%         }
+    \entry
+		{5/2020 -- 5/2020}
+		{Freelance Developer}
+		{Malak}
+		{
+		    \vspace{-5mm}
+    	    \begin{itemize}
+    	        \setlength\itemsep{0pt}
+    	        \setlength\parskip{0pt}
+    	        \item Gestión de proyecto
+    	        \item Diseño e implementación de la arquitectura del sistema
+    	        \item Diseño e implementación de base de datos
+    	        \item Desarrollo backend
+    	        \item Desarrollo frontend
+    	        \item Enlace mediande API REST con sistema Restaurant.pe
+    	    \end{itemize}\texttt{PHP}\slashsep\texttt{Laravel}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}\slashsep\texttt{CPanel}
+        }
 	\entry
-		{4/2019 -- 4/2020}
+		{4/2020 -- 4/2020}
 		{Freelance Developer}
 		{Peruana de Informática}
 		{
@@ -83,7 +83,7 @@
     	        \item Configuración de sistema de backups automático en Cloud
     	        \item Mantenimiento del sistema
     	    \end{itemize}
-		    \texttt{Python}\slashsep\texttt{Django}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{GitLab CI/CD}\slashsep\texttt{AWS Lightsail}\slashsep\texttt{Nginx}
+		    \texttt{Python}\slashsep\texttt{Django}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{GitLab CI/CD}\slashsep\texttt{AWS Lightsail}\slashsep\texttt{Nginx}\slashsep\texttt{Debian}
         }
 	\entry
 		{7/2018 -- 12/2019\\\footnotesize{part time}}
@@ -106,7 +106,7 @@
     	        \item Configuración de servidor Gnu/Linux
     	        \item Mantenimiento a sistemas en producción
     	    \end{itemize}
-		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{PostGis}\slashsep\texttt{GMaps}
+		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{PostGis}\slashsep\texttt{GMaps}\slashsep\texttt{Ubuntu Server}\slashsep\texttt{Apache}
         }
 	\entry
 		{12/2016 -- 12/2017\\\footnotesize{part time}}
@@ -123,7 +123,7 @@
     	        \item Agregar funcionalidades a sistema en producción
     	        \item Despliegue de sistema en servidor Gnu/Linux
     	        \item Levantamiento de requisitos
-    	    \end{itemize}\texttt{Unity}\slashsep\texttt{C\#}\slashsep\texttt{Python}\slashsep\texttt{PHP}\slashsep\texttt{JS}\slashsep\texttt{MySql}\slashsep\texttt{PostgreSql}
+    	    \end{itemize}\texttt{Unity}\slashsep\texttt{C\#}\slashsep\texttt{Python}\slashsep\texttt{PHP}\slashsep\texttt{JavaScript}\slashsep\texttt{MySql}\slashsep\texttt{PostgreSql}\slashsep\texttt{VR}\slashsep\texttt{AR}
         }
 	\entry
 		{2/2015 -- 11/2016\\\footnotesize{part time}}
@@ -140,7 +140,7 @@
     	        \item Desarrollo frontend
     	        \item Programación de vistas, triggers y funciones (PlPgSql)
     	    \end{itemize}
-		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{PostgreSql}
+		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{PostgreSql}\slashsep\texttt{Ubuntu Server}
         }
 	\entry
 		{9/2014 -- 11/2014\\\footnotesize{part time}}
