Actualizando cv y modificando estructura

--- a/main.tex
+++ b/main.tex
@@ -20,9 +20,11 @@
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\documentclass[9pt]{developercv} % Default font size, values from 8-12pt are recommended
+\documentclass[10pt]{developercv} % Default font size, values from 8-12pt are recommended
 
 %----------------------------------------------------------------------------------------
+
+\renewcommand{\baselinestretch}{1.1}
 
 \usepackage{eso-pic}
 \usepackage{tikz}
@@ -36,10 +38,10 @@
 
 \input{sections/contact_info}
 \input{sections/intro_skills_techs}
-\input{sections/skills_techs}
-\input{sections/experience}
 \input{sections/education}
+\input{sections/experience}
+\input{sections/skills_techs}
 \input{sections/additional_info}
-\input{sections/anexos}
+% \input{sections/anexos}
 
 \end{document}
