--- a/sections/education.tex
+++ b/sections/education.tex
@@ -6,145 +6,114 @@
 		{Ingeniería de software}
 		{Universidad La Salle}
 		{
-		    Especialidad en investigación, desarrollo e innovación(I+D+I), gracias al conocimiento obtenido sobre estructura de datos, diseño y arquitectura de software, inteligencia artificial(machine learning, deep learning), minería de datos, administración de proyectos, computación distribuida y paralela, entre otros.\\
-		    
-		    Egresado: Julio - 2019 \\
-		    Bachillerato: En proceso
+		  %  Especialidad en investigación, desarrollo e innovación(I+D+I), gracias al conocimiento obtenido sobre estructura de datos, diseño y arquitectura de software, inteligencia artificial(machine learning, deep learning), minería de datos, administración de proyectos, computación distribuida y paralela, entre otros.\\
+		    %
+		    \vspace{-5mm}
+		    \begin{itemize}
+		        \setlength\itemsep{0pt}
+		        \item Bachillerato: En proceso
+		        \item Egresado: Julio - 2019
+		        \item Promedio: 16.96 / 20
+		        \item Actividades y asociaciones: Taller de música, Grupo de investigación
+		    \end{itemize}
 		}
 	\entry
 		{2009 -- 2011}
 		{Computación e informática}
 		{Instituto superior UNITEK - IDAT}
 		{
-		    Especialidad en programación, para ello se requirió el aprendizaje de lógica de programación, algunos lenguajes de programación(C++, Java, .Net) y tecnologías informáticas.\\
-		    
-		    Egresado: Diciembre - 2011
+		  %  Especialidad en programación, para ello se requirió el aprendizaje de lógica de programación, algunos lenguajes de programación(C++, Java, .Net) y tecnologías informáticas.\\
+		    %
+		    \vspace{-5mm}
+		    \begin{itemize}
+		        \setlength\itemsep{0pt}
+		        \item Egresado: Diciembre - 2011
+		    \end{itemize}
         }
 \end{entrylist}
 
-\newpage
-
 \cvsect{Cursos y MOOCs}
 \begin{entrylist}
+    \entry
+		{06/07/2020}
+		{Deep Learning with PyTorch: Zero to GANs}
+		{Jovian.ml - freeCodeCamp}
+		{
+		    \vspace{-5mm}
+		    \begin{itemize}
+		        \setlength\itemsep{0pt}
+		        \item Calificación: No provee (Completadas 6 tareas de 5 requeridas)
+		        \item Instructor: Aakash N S
+		        \item Certificado: {\href{https://jovian.ml/certificate/MFQWCNBYGQ}{https://jovian.ml/certificate/MFQWCNBYGQ}}
+		        \item ID: MFQWCNBYGQ
+		    \end{itemize}
+		}
+    \entry
+		{21/06/2020}
+		{Introducción a la Minería de Datos}
+		{Pontificia Universidad Católica de Chile - Coursera}
+		{
+		    \vspace{-5mm}
+		    \begin{itemize}
+		        \setlength\itemsep{0pt}
+		        \item Calificación: 100.00\%
+		        \item Instructor: Karim Pichara Baksai
+		        \item Certificado: Sin comprar
+		    \end{itemize}
+		}
     \entry
 		{15/06/2020}
 		{Data Science Math Skills}
 		{Duke University - Coursera}
 		{
-		    Instructor: Daniel Egger y Paul Bendich \\
 		    \vspace{-5mm}
-    	    \begin{itemize}
-    	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Welcome to Data Science Math Skills
-    	        \item Building Blocks for Problem Solving
-    	        \item Functions and Graphs
-    	        \item Measuring Rates of Change
-    	        \item Introduction to Probability Theory
-            \end{itemize}
-            
-            \textbf{Certificado:} \\
-            ID: XP73L8MVSYLE \\
-            URL: {\href{https://coursera.org/verify/XP73L8MVSYLE}{coursera.org/verify/XP73L8MVSYLE}}
+		    \begin{itemize}
+		        \setlength\itemsep{0pt}
+		        \item Calificación: 96.00\%
+		        \item Instructor: Daniel Egger y Paul Bendich
+		        \item Certificado: {\href{https://coursera.org/verify/XP73L8MVSYLE}{coursera.org/verify/XP73L8MVSYLE}}
+		        \item ID: XP73L8MVSYLE
+		    \end{itemize}
 		}
     \entry
 		{03/06/2020}
 		{IA para todos}
 		{deeplearning.ai - Coursera}
 		{
-		    Instructor: Andrew Ng \\
 		    \vspace{-5mm}
-    	    \begin{itemize}
-    	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item ¿Qué es la IA?
-    	        \item Creación de proyectos de IA
-    	        \item Desarrollo de IA en su empresa
-    	        \item La IA y la sociedad
-            \end{itemize}
-            
-            \textbf{Certificado:} \\
-            ID: W5Y25Q7GVVKB \\
-            URL: {\href{https://coursera.org/verify/W5Y25Q7GVVKB}{coursera.org/verify/W5Y25Q7GVVKB}}
-		}
-    \entry
-		{03/06/2020}
-		{Introduction to Flutter Development Using Dart}
-		{App Brewery}
-		{
-		    Instructor: Angela Yu \\
-		    \vspace{-5mm}
-    	    \begin{itemize}
-    	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Introduction to Flutter Development
-    	        \item Installation and Setup for Flutter Development
-    	        \item How to Create Flutter Apps From Scratch (I Am Rich Project)
-    	        \item Running Your App on a Physical Device
-    	        \item I Am Poor - App Challenge
-    	        \item MiCard - How to Build Beautiful UIs with Flutter Widgets
-    	        \item Dicee - Building Apps with State
-    	        \item Boss Level Challenge 1 - Magic 8 Ball
-    	        \item Xylophone - Using Flutter and Dart Packages to Speed Up Development
-    	        \item Quizzler - Modularising \& Organising Flutter Code
-    	        \item Boss Level Challenge 2 - Destini
-            \end{itemize}
-            
-            \textbf{Certificado:} En anexos
+		    \begin{itemize}
+		        \setlength\itemsep{0pt}
+		        \item Calificación: 100.00\%
+		        \item Instructor: Andrew Ng
+		        \item Certificado: {\href{https://coursera.org/verify/W5Y25Q7GVVKB}{coursera.org/verify/W5Y25Q7GVVKB}}
+		        \item ID: W5Y25Q7GVVKB
+		    \end{itemize}
 		}
 	\entry
 		{05/05/2020}
 		{Machine Learning}
 		{Stanford University - Coursera}
 		{
-		    Instructor: Andrew Ng \\
 		    \vspace{-5mm}
-    	    \begin{itemize}
-    	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Introduction
-    	        \item Linear Regression with One Variable
-    	        \item Linear Algebra Review
-    	        \item Linear Regression with Multiple Variables
-    	        \item Octave/Matlab Tutorial
-    	        \item Logistic Regression
-    	        \item Regularization
-    	        \item Neural Networks: Representation
-    	        \item Neural Networks: Learning
-    	        \item Advice for Applying Machine Learning
-    	        \item Machine Learning System Design
-    	        \item Support Vector Machines
-    	        \item Unsupervised Learning
-    	        \item Dimensionality Reduction
-    	        \item Anomaly Detection
-    	        \item Recommender Systems
-    	        \item Large Scale Machine Learning
-    	        \item Application Example: Photo OCR
-    	    \end{itemize}
-    	    \textbf{Calificación:} \\
-    	    95.30\%
+		    \begin{itemize}
+		        \setlength\itemsep{0pt}
+		        \item Calificación: 95.30\%
+		        \item Instructor: Andrew Ng
+		        \item Certificado: Sin comprar
+		    \end{itemize}
 		}
 	\entry
 		{06/04/2020}
 		{Cloud Computing}
 		{Escuela de organización industrial - Google Activate}
 		{
-		    Instructor: Juanjo García y Moisés Navarro \\
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-		        \item Introducción: qué es la nube, ventajas e inconvenientes
-		        \item Cómo se organiza la nube: desde la infraestructura hasta el software
-		        \item Seguridad en Cloud
-		        \item Innovación y transformación tecnológica desde el usuario
-		        \item Qué necesitan y qué buscan las empresas
-		        \item Casos de uso
-		        \item Conclusiones
+		        \item Calificación: No provee (Progreso 100\%)
+		        \item Instructor: Juanjo García y Moisés Navarro
+		        \item Certificado: {\href{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}}
+		        \item ID: U7B G5R DZP
 		    \end{itemize}
-		    
-		    \textbf{Certificado:} \\
-		    ID: U7B G5R DZP \\
-		    URL: {\href{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}{https://LEARNDIGITAL.WITHGOOGLE.COM/ACTIVATE/validate-certificate-code}}
 		}
 \end{entrylist}
