--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -9,26 +9,55 @@
 %     	    \vspace{-5mm}
 %     	    \begin{itemize}
 %     	        \setlength\itemsep{0pt}
-%     	        \setlength\parskip{0pt}
 %     	        \item lorem
 %     	    \end{itemize}
 %         }
-    \entry
-		{5/2020 -- 5/2020}
+%     \entry
+% 		{5/2020 -- 5/2020}
+% 		{Freelance Developer}
+% 		{Malak}
+% 		{
+% 		    \vspace{-5mm}
+%     	    \begin{itemize}
+%     	        \setlength\itemsep{0pt}
+%     	        \setlength\parskip{0pt}
+%     	        \item Gestión de proyecto
+%     	        \item Diseño e implementación de la arquitectura del sistema
+%     	        \item Diseño e implementación de base de datos
+%     	        \item Desarrollo backend
+%     	        \item Desarrollo frontend
+%     	        \item Enlace mediande API REST con sistema Restaurant.pe
+%     	    \end{itemize}\texttt{PHP}\slashsep\texttt{Laravel}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}\slashsep\texttt{CPanel}
+%         }
+	\entry
+		{7/2020 -- 7/2020}
 		{Freelance Developer}
-		{Malak}
+		{Evolution Soluciones Digitales}
 		{
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
+    	        \item Automatización de envió de mensajes masivos de WhatsApp
+    	    \end{itemize}
+		    \texttt{Electron}\slashsep\texttt{Vue}\slashsep\texttt{Selenium}\slashsep\texttt{Vuetify}
+        }
+    \entry
+		{12/2019 -- 5/2020}
+		{Freelance Developer}
+		{Constructora Cesar Chocano}
+		{
+		    \vspace{-5mm}
+    	    \begin{itemize}
+    	        \setlength\itemsep{0pt}
     	        \item Gestión de proyecto
-    	        \item Diseño e implementación de la arquitectura del sistema
-    	        \item Diseño e implementación de base de datos
-    	        \item Desarrollo backend
-    	        \item Desarrollo frontend
-    	        \item Enlace mediande API REST con sistema Restaurant.pe
-    	    \end{itemize}\texttt{PHP}\slashsep\texttt{Laravel}\slashsep\texttt{Vue}\slashsep\texttt{Postgresql}\slashsep\texttt{CPanel}
+    	        \item Levantamiento y análisis de requisitos
+    	        \item Diseño e implementación de todo el sistema (arquitectura, base de datos, backend, frontend, API REST)
+    	        \item Configuración de servidor Gnu/Linux en AWS Lightsail
+    	        \item Configuración para CI/CD
+    	        \item Configuración de sistema de backups automático en Cloud
+    	        \item Mantenimiento del sistema
+    	    \end{itemize}
+		    \texttt{Python}\slashsep\texttt{Django}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{GitLab CI/CD}\slashsep\texttt{AWS Lightsail}\slashsep\texttt{Nginx}\slashsep\texttt{Debian}
         }
 	\entry
 		{4/2020 -- 4/2020}
@@ -38,9 +67,7 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Instalación de tienda en linea
-    	        \item Configuración de la tienda
+    	        \item Instalación y configuración de tienda en linea
     	        \item Programación de módulos para chat Facebook Messenger y WhatsApp
     	    \end{itemize}
 		    \texttt{Prestashop}\slashsep\texttt{Html}\slashsep\texttt{Css}\slashsep\texttt{CPanel}
@@ -53,37 +80,11 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Gestión de proyecto
-    	        \item Desarrollo de nuevos módulos
-    	        \item Agregar y corregir funcionalidades de módulos
-    	        \item Desarrollo backend y frontend
+    	        \item Desarrollo y corrección de funcionalidades de módulos (backend y frontend)
     	        \item Programación de vistas, triggers y funciones (PlPgSql)
     	        \item Despliegue de funcionalidades a sistema en producción (código y base de datos)
     	    \end{itemize}
 		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{Svn}\slashsep\texttt{Docker}
-        }
-    \entry
-		{12/2019 -- 4/2020}
-		{Freelance Developer}
-		{Constructora Cesar Chocano}
-		{
-		    \vspace{-5mm}
-    	    \begin{itemize}
-    	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Gestión de proyecto
-    	        \item Levantamiento y análisis de requisitos
-    	        \item Diseño e implementación de la arquitectura del sistema
-    	        \item Diseño e implementación de base de datos
-    	        \item Desarrollo backend y API REST
-    	        \item Desarrollo frontend
-    	        \item Configuración de servidor Gnu/Linux en AWS Lightsail
-    	        \item Configuración para CI/CD
-    	        \item Configuración de sistema de backups automático en Cloud
-    	        \item Mantenimiento del sistema
-    	    \end{itemize}
-		    \texttt{Python}\slashsep\texttt{Django}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{Postgresql}\slashsep\texttt{GitLab CI/CD}\slashsep\texttt{AWS Lightsail}\slashsep\texttt{Nginx}\slashsep\texttt{Debian}
         }
 	\entry
 		{7/2018 -- 12/2019\\\footnotesize{part time}}
@@ -93,14 +94,9 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Desarrollo de micro aplicaciones
-    	        \item Implementación de nuevos módulos
+    	        \item Desarrollo de micro aplicaciones y módulos (backend y frontend)
     	        \item Despliegue de funcionalidades a sistemas en producción (código y bases de datos)
     	        \item Optimización de código y mejora de rendimiento de funcionalidades
-    	        \item Agregar funcionalidades a módulos existentes
-    	        \item Desarrollo backend usando framework interno
-    	        \item Desarrollo frontend
     	        \item Programación de vistas, triggers y funciones (PlPgSql)
     	        \item Migración de sistemas a nuevas versiones (código y bases de datos)
     	        \item Configuración de servidor Gnu/Linux
@@ -116,7 +112,6 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
     	        \item Desarrollo de nuevos módulos y sistemas informáticos en diferentes tecnologías
     	        \item Programación de vídeo juegos y simuladores con realidad virtual y aumentada
     	        \item Programación para móviles
@@ -133,11 +128,8 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
-    	        \item Implementación de nuevos módulos
+    	        \item Implementación de nuevos módulos (backend y frontend)
     	        \item Agregar funcionalidades a módulos existentes
-    	        \item Desarrollo backend usando framework interno
-    	        \item Desarrollo frontend
     	        \item Programación de vistas, triggers y funciones (PlPgSql)
     	    \end{itemize}
 		    \texttt{PHP}\slashsep\texttt{Sencha ExtJs}\slashsep\texttt{PostgreSql}\slashsep\texttt{Ubuntu Server}
@@ -150,7 +142,6 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
     	        \item Agregar y corregir funcionalidades pequeñas a diferentes módulos
     	    \end{itemize}
 		    \texttt{PHP}\slashsep\texttt{MySql}
@@ -163,7 +154,6 @@
 		    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
     	        \item Levantamiento de requisitos
     	        \item Análisis, diseño e implentación de la base de datos
     	        \item Programación de sistema de escritorio(Java SE, Java Swing)
@@ -178,7 +168,6 @@
 		    \vspace{-5mm}
 		    \begin{itemize}
 		        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
 		        \item Implementación y configuración de tienda en línea
 		        \item Capacitación para la gestión de la página
 		    \end{itemize}
@@ -192,7 +181,6 @@
     	    \vspace{-5mm}
     	    \begin{itemize}
     	        \setlength\itemsep{0pt}
-    	        \setlength\parskip{0pt}
     	        \item Ensamblaje de computadoras
     	        \item Mantenimiento de equipos
     	        \item Implementación de redes
