--- a/sections/intro_skills_techs.tex
+++ b/sections/intro_skills_techs.tex
@@ -2,7 +2,7 @@
 
 \begin{minipage}[t]{0.4\textwidth} % 40% of the page width for the introduction text
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
-	Mi nombre completo es Kelvin Helmut Provincia Quispe y mi DNI es 48446320, soy desarrollador de software con capacidad de gestión de proyectos, diseño e implmentación de arquitecturas, bases de datos y configuración de servidores de desarrollo y producción. Tengo la necesidad de seguir aprendiendo constantemente, me gusta estudiar nuevas y mejores formas de hacer algo. Mis intereses actuales de aprendizaje son las prácticas DevOps con CI/CD, Aprendizaje automático y Ciencia de datos. Considero mi habilidad principal la de aprender fácilmente, además, me indicaron que tengo una muy buena habilidad para la resolución de problemas.
+	Mi nombre completo es Kelvin Helmut Provincia Quispe y mi DNI es 48446320, soy desarrollador de software con capacidad de gestión de proyectos, diseño e implementación de arquitecturas, bases de datos y configuración de servidores de desarrollo y producción. Tengo la necesidad de seguir aprendiendo constantemente, me gusta estudiar nuevas y mejores formas de hacer algo. Mis intereses actuales de aprendizaje son las prácticas DevOps con CI/CD, Aprendizaje automático y Ciencia de datos. Considero mi habilidad principal la de aprender fácilmente, además, me indicaron que tengo una muy buena habilidad para la resolución de problemas.
 \end{minipage}
 \hfill % Whitespace between
 \begin{minipage}[t]{0.5\textwidth} % 50% of the page for the skills bar chart
@@ -12,13 +12,17 @@
 		\baritem{Python}{80}
 		\baritem{Java}{60}
 		\baritem{PHP}{70}
-		\baritem{C\#}{30}
 		\baritem{Sql}{85}
-		\baritem{NoSql}{20}
 		\baritem{Gnu/Linux}{70}
+		\baritem{Git}{50}
 	\end{barchart}
+	
+	\vspace{5mm}
+	\begin{center}
+    	\bubbles{4.5/Machine learning, 0/, 4/Data Science, 0/, 6/Desarrollo web}
+    \end{center}
 \end{minipage}
 
-\begin{center}
-	\bubbles{6/Django, 4/Spring, 3/Angular, 3/Vue, 5/Extjs, 3/git, 3/svn}
-\end{center}
+% \begin{center}
+% 	\bubbles{6/Django, 4/Spring, 3/Angular, 3/Vue, 5/Extjs, 3/git, 3/svn}
+% \end{center}
