--- a/sections/contact_info.tex
+++ b/sections/contact_info.tex
@@ -12,15 +12,15 @@
 	{\huge Software Engineer} % Career or current job title
 
 	\AddToShipoutPicture*{
-	    \put(186,-42){
+	    \put(195,-42){
             \parbox[b][\paperheight]{\paperwidth}{%
                 % \vfill
                 % \centering
                 % \includegraphics[width=100,height=100, keepaspectratio]{foto}
                 \begin{tikzpicture} 
                     \begin{scope}
-                        \clip [rounded corners=1.5cm] (0,0) rectangle coordinate (centerpoint) (3,3cm); 
-                        \node [inner sep=0pt] at (centerpoint) {\includegraphics[width=3.0cm,keepaspectratio]{images/foto}}; 
+                        \clip [rounded corners=1.0cm] (0,0) rectangle coordinate (centerpoint) (2.4,2.4cm); 
+                        \node [inner sep=0pt] at (centerpoint) {\includegraphics[width=2.4cm,keepaspectratio]{images/foto}}; 
                     \end{scope}
                 \end{tikzpicture}
                 \vfill
@@ -28,16 +28,18 @@
         }
 	}
 \end{minipage}
-\begin{minipage}[t]{0.275\textwidth} % 27.5% of the page width for the first row of icons
+%
+\begin{minipage}[t]{0.25\textwidth} % 27.5% of the page width for the first row of icons
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
 	% The first parameter is the FontAwesome icon name, the second is the box size and the third is the text
 	% Other icons can be found by referring to fontawesome.pdf (supplied with the template) and using the word after \fa in the command for the icon you want
 	\icon{MapMarker}{12}{Arequipa - Perú}\\
-	\icon{Phone}{12}{\href{https://api.whatsapp.com/send?phone=+51954733536}{954733536}}\\
+	\icon{Phone}{12}{\href{https://api.whatsapp.com/send?phone=+51954733536}{+51954733536}}\\
 	\icon{At}{12}{\href{mailto:aek6.io@gmail.com}{aek6.io@gmail.com}}\\	
 \end{minipage}
-\begin{minipage}[t]{0.275\textwidth} % 27.5% of the page width for the second row of icons
+%
+\begin{minipage}[t]{0.30\textwidth} % 27.5% of the page width for the second row of icons
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
 	% The first parameter is the FontAwesome icon name, the second is the box size and the third is the text
